--- a/layouts/posts.html
+++ b/layouts/posts.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href='bower_components/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet'>
+<!--        <link href='bower_components/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet'>-->
+        <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     </head>
     <body ng-app='app'>
         <div ng-controller='PostsCtrl' class='container'>
@@ -24,11 +25,12 @@
             </ul>
         </div>
         
-        <script src='bower_components/jquery/dist/jquery.min.js'></script>
-        <script src='bower_components/angular/angular.min.js'></script>
+<!--        <script src='bower_components/jquery/dist/jquery.min.js'></script>-->
+<!--        <script src='bower_components/angular/angular.min.js'></script>-->
+        <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.js'></script>
         <script>
             var app = angular.module('app', []);
-            app.controller('PostsCtrl', function($scope) {
+            app.controller('PostsCtrl', function($scope, $http) {
                 
                 $scope.addPost = function(){
                     if($scope.postBody){
@@ -40,15 +42,10 @@
                     }
                 }
                 
-                $scope.posts = [
-                    {
-                        username: 'aaa',
-                        body:'aaa1'
-                    },{
-                        username: 'bbb',
-                        body:'bbb2'
-                    }
-                ]
+                $http.get('http://localhost:3000/api/posts')
+                .success(function(posts){
+                    $scope.posts = posts;
+                })
             })
         </script>
     </body>
