p56, saving posts via http

--- a/layouts/posts.html
+++ b/layouts/posts.html
@@ -34,11 +34,13 @@
                 
                 $scope.addPost = function(){
                     if($scope.postBody){
-                        $scope.posts.unshift({
-                            username: 'new_guy',
-                            body: $scope.postBody
-                        });
-                        $scope.postBody = null;
+                       $http.post('/api/posts', {
+                           username: 'bbb',
+                           body: $scope.postBody
+                       }).success(function (post){
+                           $scope.posts.unshift(post);
+                           $scope.postBody = null;
+                       })
                     }
                 }
                 
