--- a/layouts/posts.html
+++ b/layouts/posts.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <!--        <link href='bower_components/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet'>-->
-    <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link href='bower_static/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet'>
 </head>
 
 <body ng-app='app'>
@@ -27,31 +26,10 @@
         </ul>
     </div>
 
-    <!--        <script src='bower_components/jquery/dist/jquery.min.js'></script>-->
-    <!--        <script src='bower_components/angular/angular.min.js'></script>-->
-    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.js'></script>
-    <script>
-        var app = angular.module('app', []);
-        app.controller('PostsCtrl', function ($scope, $http) {
+    <script src='bower_static/jquery/dist/jquery.min.js'></script>
+    <script src='bower_static/angular/angular.min.js'></script>
+    <script src='static/app.js'></script>
 
-            $scope.addPost = function () {
-                if ($scope.postBody) {
-                    $http.post('/api/posts', {
-                        username: 'bbb',
-                        body: $scope.postBody
-                    }).success(function (post) {
-                        $scope.posts.unshift(post);
-                        $scope.postBody = null;
-                    })
-                }
-            }
-
-            $http.get('http://localhost:3000/api/posts')
-                .success(function (posts) {
-                    $scope.posts = posts;
-                })
-        })
-    </script>
 </body>
 
 </html>
